--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
     "@angular/core": "~11.2.1",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.1",
     "@angular/localize": "~11.2.1",
     "@angular/platform-browser": "~11.2.1",
@@ -22,6 +23,7 @@
     "@angular/router": "~11.2.1",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^4.5.0",
+    "firebase": "^8.4.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.16.2",
     "tslib": "^2.0.0",
